SQLite ODBC Driver
------------------

Sat Aug 31 2002 version 0.46 released

	* experimental: configuration option: use coroutine
	  instead of thread for running select statements
	* SQLMoreResults() now always returns SQL_NO_DATA
	* use the new PRAGMA show_datatypes if available
	* reworked busy handling logic to use sqlite_busy_handler()
	* now perform sqlite_open() in single function dbopen()
	* changed all pthread_cond_signal() to pthread_cond_broadcast()

Fri Jul 05 2002 version 0.45 released

	* improved timestamp scanning
	* return result set with _ROWID_ for SQLSpecialColumns()
	  when no unique column in table
	* fixes in parameter substitution (SQLSetParam())
	* fixed reading data in pieces (SQLGetData())
	* added dummy implementations for SQLTablePrivileges(),
	  SQLColumnPrivileges(), SQLProcedures(), SQLForeignKeys(),
	  SQLProcedureColumns()
	* code cleanup
	* added support for NULL in parameters using %Q
	  sqlite_..printf() format specifier for SQLite > 2.4.x

Sun Jun 16 2002 version 0.44 released

	* fixed getbool() to return false on empty string
	* added implementation of SQLParamData(), SQLPutData()
	* fixed values of NON_UNIQUE field in SQLStatistics(),
	  store empty INDEX_QUALIFIER field in SQLStatistics()
	* fixes in getrowdata() concerning partial retrieving
	  of result set
	* when starting an asynchronous query, set number of
	  result rows to -1
	* fixes in SQLBindParameters(), for some datatypes
	  the binding was not performed

Sun Jun 09 2002 version 0.43 released

	* replaced all %s in PRAGMAs by '%q' to make SQLPrimaryKeys(),
	  SQLStatistics(), SQLSpecialColumns() work on automatic indexes
	* added NULLABLE column to result set of SQLSpecialColumns()
	  to support last SQLSpecialColumns() parameter properly
	* additions in SQLGetInfo()
	* added implemetation of SQL(Get|Set)ConnectAttr()
	* improved handling of SQLDriverConnect() for non Win32 OSes
	* improved handling of arguments in SQLTables()
