@@ -1,5 +1,5 @@
 %define name sqliteodbc
-%define version 0.46
+%define version 0.47
 %define release 1
 
 Name: %{name}
